# blog_django

./: db.sqlite3  pyproject.toml
blog/: admin.py  cb_views.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_options_blog_author.py
config/: settings.py  urls.py
member/: admin.py  views.py
templates/: base.html
templates/blog/: blog_detail.html  blog_list.html  blog_update.html
